--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> hi this is raushan kumar presenting here and how are you guys</h1>
-    <button  class="btn btn-success">Contact us</button>
+{{>navbar}}
+<h1>contact</h1>
     <script src="../jq/jquery.js" type= "text/javascript"></script>
     <script src="../jq/bootstrap.js" type= "text/javascript"></script>
 </body>
