--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,8 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> hi this is raushan kumar presenting here and how are you guys</h1>
-    <button  class="btn btn-success">awesome</button>
+   {{>navbar}}
     <script src="../jq/jquery.js" type= "text/javascript"></script>
     <script src="../jq/bootstrap.js" type= "text/javascript"></script>
 </body>
