--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
 
-    <title>Document</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+
+  <title>Document</title>
 </head>
+
 <body>
-   {{>navbar}}
-    <script src="../jq/jquery.js" type= "text/javascript"></script>
-    <script src="../jq/bootstrap.js" type= "text/javascript"></script>
+  {{>navbar}}
+  <div class="container-fluid mt-5">
+    <div class="row">
+      {{!-- here mx-auto for giving space from both side --}}
+      <div class="col-md-10 col-12 mx-auto">
+        <div class="row">
+          {{!-- lift side div --}}
+          <div
+            class="col-md-6 col-12 hero-text order-md-0 order-1 d-flex justifey-content-center align-items-start flex-column">
+            <h1>WE WILL HELP YOU TO </h1>
+            <h1>GROW YOUR BUSINESS</h1>
+            <p> We Are the Team of <span class="bold-style">Professional developer</span></p>
+            <button class="btn-style btn-primary">Read more</button>
+          </div>
+          {{!-- right side dib --}}
+          <div class="col-md-6 col-12 hero-text order-md-1 order-0">
+            <figure>
+              <img src="images/download.png" alt="images not avilable">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {{!-- about us started  --}}
+  {{>about}}
+
+  {{!-- about services  --}}
+  {{>service}}
+
+  {{!-- about maps   --}}
+  {{>maps}}
+
+  {{>contact}}
+  <script src="../jq/jquery.js" type="text/javascript"></script>
+  <script src="../jq/bootstrap.js" type="text/javascript"></script>
 </body>
+
 </html>
